# mestint-feladatok

./: .clang-format  .gitignore  README.md
lab01-buvos/: Makefile  antall  antall.cpp  buvos-dbg  buvos-opt  buvos.cpp  buvos_backup.cpp  buvos_backup1.cpp  buvosnegyzetek.txt  test
lab02-sudoku/: CMakeLists.txt  Makefile  generate.cpp  generate.hpp  globals.cpp  globals.hpp  sudoku.cpp  sudoku4.cpp  sudoku4.hpp  sudoku9.cpp  sudoku9.hpp  sudoku9_util.cpp  sudoku9_util.hpp  util.hpp
lab02-sudoku/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  sudoku
lab02-sudoku/Release/: CMakeCache.txt  Makefile  cmake_install.cmake  sudoku  test
lab02-sudoku/rejtvenyek/: sudoku_generated.txt
lab03-amoba/: CMakeLists.txt
lab03-amoba/include/calc/: minMaxTreeNode.hpp
lab03-amoba/include/game/: field.hpp  local.hpp  netPlay.hpp
lab03-amoba/include/tcp/: TcpException.hpp  TcpListener.hpp  TcpSocket.hpp
lab03-amoba/src/: amoba.cpp
lab03-amoba/src/game/: field.cpp  local.cpp  netPlay.cpp
lab03-amoba/src/tcp/: TcpException.cpp  TcpListener.cpp  TcpSocket.cpp
lab04-ocr/: ocr.jl  ocrTools.jl  results  test.tes  test.tra
lab04-ocr/results/: result_centroid_gauss  result_centroid_linear  result_centroid_poly  result_knn_gauss  result_knn_linear  result_knn_poly  result_test
szem/beka/: beka.pl
